--- a/ui/index.html
+++ b/ui/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="footer">
                 <div class="footer3" v-show="canApprove">
-                    <button v-on:click="approve">{{creatorName}} {{creatorSurname}}</button>
+                    <button v-on:click="approve">{{approvalSignature}}</button>
                     <div>sign of approval</div>
                 </div>
                 <div class="footer2">
